--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Nata's website{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -15,5 +18,6 @@
         {% block content %}Lab{% endblock %}
     </div>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
+
 </body>
 </html>
