--- a/main/templates/create_event.html
+++ b/main/templates/create_event.html
@@ -1,13 +1,73 @@
-<!-- create_event.html -->
-
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Створення події</h1>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Зберегти</button>
-</form>
-<a href="{% url 'event_list' %}">Повернутися до списку подій</a>
+<div class="container mt-5">
+    <h1>Створення події</h1>
+
+    <form method="post" class="mt-3">
+
+        <div class="mb-3">
+            <button type="submit" class="btn btn-primary">Зберегти</button>
+            <a href="{% url 'event_list' %}" class="btn btn-secondary">Повернутися до списку подій</a>
+        </div>
+
+        {% csrf_token %}
+
+        <div class="mb-3">
+            {{ form.is_complete.label_tag }}
+            {{ form.is_complete }}
+        </div>
+
+        <div class="mb-3">
+            {{ form.date_time.label_tag }}
+            {{ form.date_time }}
+        </div>
+
+        <div class="mb-3">
+            {{ form.place.label_tag }}
+            {{ form.place }}
+        </div>
+
+        <div class="mb-3">
+            {{ form.price.label_tag }}
+            {{ form.price }}
+        </div>
+
+        <div class="mb-3">
+            {{ form.amount.label_tag }}
+            {{ form.amount }}
+        </div>
+
+        <div class="mb-3">
+            <label for="name-autocomplete" style="display: none;">Назва події</label>
+            <input type="text" class="form-control" id="name-autocomplete" placeholder="Назва події" name="name">
+        </div>
+
+        <!-- Виведення результатів буде автоматично вбудовано в меню автозаповнення -->
+
+    </form>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+    <script>
+        $(document).ready(function () {
+            // Initialize autocomplete for the name input field
+            $("#name-autocomplete").autocomplete({
+                source: '/api/events/autocomplete/',
+                minLength: 3,
+                select: function (event, ui) {
+                    // Set the selected event's name in the input field
+                    $("#name-autocomplete").val(ui.item.name);
+                    // Set the selected event's ID in the hidden input field
+                    $("#event_id").val(ui.item.id);
+                    return false; // Prevent the widget from inserting the value
+                }
+            }).autocomplete("instance")._renderItem = function (ul, item) {
+                return $("<li>")
+                    .append("<div>" + item.name + "</div>")
+                    .appendTo(ul);
+            };
+        });
+    </script>
+</div>
 {% endblock %}
